addeed final touches noiw going to deploy

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sagar's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Sagar Maheshwari - Full Stack Developer & CS Student Portfolio</title>
+    <meta name="description" content="Portfolio of Sagar Maheshwari - Full Stack Developer and Computer Science student showcasing projects and skills">
+    <meta name="keywords" content="full stack developer, portfolio, web development, computer science student">
+    <meta name="author" content="Sagar Maheshwari">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">
 
     <style>
@@ -370,7 +370,7 @@
                 display: block;
                 background: none;
                 border: none;
-                color: var(--light-text);
+                color: var(--dark-text);
                 font-size: 1.5rem;
                 cursor: pointer;
             }
@@ -597,7 +597,7 @@
                 <div class="profile-img">
                     <!-- <i class="fas fa-user-circle" style="font-size: 18rem; color: rgba(255,255,255,0.1);"></i> -->
                     
-                    <img src="bg.webp">
+                    <img src="bg.webp" alt="Sagar Maheshwari cartoon image">
                 </div>
             </div>
         </div>
@@ -614,7 +614,7 @@
                     <i class="fas fa-film"></i>
                 </div>
                 <h3 class="project-title">Bingbox Movie Search</h3>
-                <span class="project-date">Jan 2023 - Mar 2023</span>
+                <span class="project-date">july 2025 - july 2025</span>
                 <div class="project-tech">
                     <span class="tech-item">React</span>
                     <span class="tech-item">Node.js</span>
@@ -632,7 +632,7 @@
             <i class="fas fa-shopping-cart"></i>
         </div>
         <h3 class="project-title">E-Commerce Store</h3>
-        <span class="project-date">Apr 2023 - Jun 2023</span>
+        <span class="project-date">july 2025 - july 2025</span>
         <div class="project-tech">
             <span class="tech-item">MERN Stack</span>
             <span class="tech-item">Redux</span>
@@ -648,7 +648,7 @@
             <i class="fas fa-tasks"></i>
         </div>
         <h3 class="project-title">Task Management App</h3>
-        <span class="project-date">Jul 2023 - Sep 2023</span>
+        <span class="project-date">Jul 2025 - Sep 2025</span>
         <div class="project-tech">
             <span class="tech-item">Vue.js</span>
             <span class="tech-item">Firebase</span>
@@ -663,7 +663,7 @@
                 <i class="fas fa-chart-line"></i>
         </div>
         <h3 class="project-title">Financial Dashboard</h3>
-        <span class="project-date">Oct 2023 - Dec 2023</span>
+        <span class="project-date">july 2025 - july 2025</span>
         <div class="project-tech">
             <span class="tech-item">React</span>
             <span class="tech-item">D3.js</span>
@@ -680,7 +680,7 @@
             <i class="fas fa-robot"></i>
         </div>
         <h3 class="project-title">AI Chatbot</h3>
-        <span class="project-date">Jan 2024 - Mar 2024</span>
+        <span class="project-date">july 2025 - july 2025</span>
         <div class="project-tech">
             <span class="tech-item">Python</span>
             <span class="tech-item">TensorFlow</span>
@@ -697,7 +697,7 @@
                    <i class="fas fa-mobile-alt"></i>
                 </div>
                 <h3 class="project-title">Fitness Tracker App</h3>
-                <span class="project-date">Apr 2024 - Present</span>
+                <span class="project-date">july 2025 - Present</span>
                 <div class="project-tech">
                     <span class="tech-item">React Native</span>
                     <span class="tech-item">Firebase</span>
@@ -732,7 +732,7 @@
     </section>
 
     <footer class="footer">
-        <p>© 2024 Sagar Maheshwari. All rights reserved.</p>
+        <p>© 2025 Sagar Maheshwari. All rights reserved.</p>
         <p>Designed and developed with ❤️</p>
     </footer>
 
