--- a/projects.html
+++ b/projects.html
@@ -178,7 +178,7 @@
                 /* color: black; */
                 font-size: 1.5rem;
                 cursor: pointer;
-                /* color: black; */
+                color: black;
             }
 
             .content-container {
