improve the projects.html

--- a/projects.html
+++ b/projects.html
@@ -143,6 +143,9 @@
             font-weight: 500;
         }
 
+        .menu-toggle {
+            display: none;
+        }
         /* Footer */
         .footer {
             padding: 2rem 5%;
