home anchor tag addition

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
     <!-- Portfolio Content -->
     <header class="header">
-        <div class="logo">Sagar</div>
+   <a href="index.html">    <div class="logo">Sagar</div></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
