--- a/projects.html
+++ b/projects.html
@@ -362,7 +362,7 @@
 
     <!-- Navigation -->
     <header class="header">
-        <div class="logo">Sagar</div>
+    <a href="index.html">    <div class="logo">Sagar</div></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html#home">Home</a></li>
