--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
             backdrop-filter: blur(8px);
             -webkit-backdrop-filter: blur(8px);
         }
-
+        a{
+            text-decoration: none;
+        }
         .logo {
             font-size: 1.8rem;
             color: var(--primary-color);
